## Makefile.am -- Process this file with automake to produce Makefile.in

install:
	@echo "**"
	@echo "** Studierstube is not meant to be installed into your system!"
	@echo "** Instead your source tree represents your work tree at the same time."
	@echo "** Please consult the INSTALL and FAQ files for further information."
	@echo "**"

SUBDIRS = libltdl src lib bin
