##---------------------------------------------------------------------------
##       Makefile.am,v 4.4 2004/01/22 06:07:50 ossama Exp
##
##       Makefile for the ACE network services
##
##---------------------------------------------------------------------------

##
##  Process this file with automake to create Makefile.in
##

SUBDIRS = \
  lib \
  clients \
  servers

EXTRA_DIST = ACE-netsvcs.html
