## Makefile.am -- Process this file with automake to produce Makefile.in

include $(top_srcdir)/src/Makefile.common

noinst_LTLIBRARIES = libcommon.la
libcommon_la_SOURCES = \
		ButtonFilterNode.cxx \
		ButtonFilterNode.h \
		ButtonOpNode.cxx \
		ButtonOpNode.h \
		CallbackModule.cxx \
		CallbackModule.h \
		CallbackNode.h \
		CommonNodeFactory.cxx \
		CommonNodeFactory.h \
		ConfidenceFilterNode.cxx \
		ConfidenceFilterNode.h \
		ConfidenceSelectNode.cxx \
		ConfidenceSelectNode.h \
		ConsoleModule.cxx \
		ConsoleModule.h \
		ConsoleSink.h \
		ConsoleSource.h \
		DynamicTransformation.cxx \
		DynamicTransformation.h \
		EventQueueNode.cxx \
		EventQueueNode.h \
		File.h \
		FileModule.cxx \
		FileModule.h \
		FileSink.h \
		FileSource.h \
		FilterNode.cxx \
		FilterNode.h \
		InvertTransformation.cxx \
		InvertTransformation.h \
		MatrixTransformation.cxx \
		MatrixTransformation.h \
		MergeNode.cxx \
		MergeNode.h \
		SelectionNode.cxx \
		SelectionNode.h \
		StaticTransformation.cxx \
		StaticTransformation.h \
		ThresholdFilterNode.cxx \
		ThresholdFilterNode.h \
		TimeGateNode.cxx \
		TimeGateNode.h \
		TimeModule.cxx \
		TimeModule.h \
		Transformation.cxx \
		Transformation.h \
		VirtualTransformation.cxx \
		VirtualTransformation.h \
		GroupGateModule.cxx \
		GroupGateModule.h \
		GroupGateNode.cxx \
		GroupGateNode.h
