## Makefile.am -- Process this file with automake to produce Makefile.in

include $(top_srcdir)/src/Makefile.common

otcommonincdir = $(otincdir)/common
otcommoninc_HEADERS = \
        ButtonFilterNode.h \
        ButtonHoldFilterModule.h \
        ButtonHoldFilterNode.h \
        ButtonOpNode.h \
        CallbackModule.h \
        CallbackNode.h \
        CommonNodeFactory.h \
        ConfidenceFilterNode.h \
        ConfidenceSelectNode.h \
        ConsoleModule.h \
        ConsoleSink.h \
        ConsoleSource.h \
        DynamicTransformation.h \
        ElasticFilterNode.h \
        EllipsoidTransformNode.h \
        EventQueueNode.h \
        File.h \
        FileModule.h \
        FileSink.h \
        FileSource.h \
        FilterNode.h \
        GKTransformNode.h \
        InterpolatorModule.h \
        InvertTransformation.h \
        MatrixTransformation.h \
        MergeNode.h \
	PositionFilterNode.h \
        RangeFilterNode.h \
        SelectionNode.h \
        StaticTransformation.h \
        ThresholdFilterNode.h \
        TimeGateNode.h \
        TimeModule.h \
        Transformation.h \
        VirtualTransformation.h \
        GroupGateModule.h \
        GroupGateNode.h \
        LogModule.h

noinst_LTLIBRARIES = libcommon.la
libcommon_la_SOURCES = \
        ButtonFilterNode.cxx \
        ButtonFilterNode.h \
        ButtonHoldFilterModule.cxx \
        ButtonHoldFilterModule.h \
        ButtonHoldFilterNode.cxx \
        ButtonHoldFilterNode.h \
        ButtonOpNode.cxx \
        ButtonOpNode.h \
        CallbackModule.cxx \
        CallbackModule.h \
        CallbackNode.h \
        CommonNodeFactory.cxx \
        CommonNodeFactory.h \
        ConfidenceFilterNode.cxx \
        ConfidenceFilterNode.h \
        ConfidenceSelectNode.cxx \
        ConfidenceSelectNode.h \
        ConsoleModule.cxx \
        ConsoleModule.h \
        ConsoleSink.h \
        ConsoleSource.h \
        DynamicTransformation.cxx \
        DynamicTransformation.h \
        ElasticFilterNode.cxx \
        ElasticFilterNode.h \
        EllipsoidTransformNode.cxx \
        EllipsoidTransformNode.h \
        EventQueueNode.cxx \
        EventQueueNode.h \
        File.h \
        FileModule.cxx \
        FileModule.h \
        FileSink.h \
        FileSource.h \
        FilterNode.cxx \
        FilterNode.h \
        GKTransformNode.cxx \
        GKTransformNode.h \
        InterpolatorModule.cxx \
        InterpolatorModule.h \
        InvertTransformation.cxx \
        InvertTransformation.h \
        MatrixTransformation.cxx \
        MatrixTransformation.h \
        MergeNode.cxx \
        MergeNode.h \
	PositionFilterNode.cxx \
	PositionFilterNode.h \
        RangeFilterNode.cxx \
        RangeFilterNode.h \
        SelectionNode.cxx \
        SelectionNode.h \
        StaticTransformation.cxx \
        StaticTransformation.h \
        ThresholdFilterNode.cxx \
        ThresholdFilterNode.h \
        TimeGateNode.cxx \
        TimeGateNode.h \
        TimeModule.cxx \
        TimeModule.h \
        Transformation.cxx \
        Transformation.h \
        VirtualTransformation.cxx \
        VirtualTransformation.h \
        GroupGateModule.cxx \
        GroupGateModule.h \
        GroupGateNode.cxx \
        GroupGateNode.h \
        LogModule.cxx
