## Makefile.am -- Process this file with automake to produce Makefile.in

include $(top_srcdir)/src/Makefile.common

noinst_LTLIBRARIES = libcore.la
libcore_la_SOURCES = \
		ConfigNode.h \
		ConfigurationParser.cxx \
		ConfigurationParser.h \
		Context.cxx \
		Context.h \
		DOMTreeErrorReporter.cxx \
		DOMTreeErrorReporter.h \
		EventQueueImplementation.cxx \
		EventQueueImplementation.h \
		MathUtils.cxx \
		MathUtils.h \
		Module.h \
		Node.cxx \
		Node.h \
		NodeFactory.h \
		NodeFactoryContainer.cxx \
		NodeFactoryContainer.h \
		NodePort.h \
		OSUtils.cxx \
		OSUtils.h \
		RefNode.h \
		State.cxx \
		State.h \
		StringTable.cxx \
		StringTable.h \
		TestModule.cxx \
		TestModule.h \
		TestSource.h \
		ThreadModule.cxx \
		ThreadModule.h
