## Makefile.am -- Process this file with automake to produce Makefile.in

include $(top_srcdir)/src/Makefile.common

otinputincdir = $(otincdir)/input
otinputinc_HEADERS = \
		ARTDataTrackerChomp.h \
		ARTDataTrackerModule.h \
		ARTDataTrackerSource.h \
		ARToolKitModule.h \
		ARToolKitSource.h \
		CyberMouseModule.h \
		CyberMouseSource.h \
		DGPSIP_Handler.h \
		FOBModule.h \
		FOBSource.h \
		FastTrakModule.h \
		FastTrakSource.h \
		GPSDriver.h \
		GPS_Handler.h \
		GPSModule.h \
		GPSSource.h \
		InterSenseModule.h \
		InterSenseSource.h \
		JoystickModule.h \
		JoystickSource.h \
		ParButtonModule.h \
		ParButtonSource.h \
		WacomGraphireModule.h \
		WacomGraphireSource.h \
		SpaceMouseModule.h \
		SpaceMouseSource.h \
		SpeechCore.h \
		SpeechDef.h \
		SpeechInc.h \
		SpeechModule.h \
		SpeechSet.h \
		SpeechSource.h \
		SpeechVoice.h \
		SpeechVoiceModule.h \
		UltraTrakModule.h \
		UltraTrakSource.h \
		nmea.h \
		rtcm.h

noinst_LTLIBRARIES = libinput.la
libinput_la_SOURCES = \
		ARTDataTrackerChomp.cxx \
		ARTDataTrackerChomp.h \
		ARTDataTrackerModule.cxx \
		ARTDataTrackerModule.h \
		ARTDataTrackerSource.h \
		ARToolKitModule.cxx \
		ARToolKitModule.h \
		ARToolKitSource.h \
		CyberMouseModule.cxx \
		CyberMouseModule.h \
		CyberMouseSource.h \
		DGPSIP_Handler.h \
		DGPSIP_Handler.cxx \
		FOBModule.cxx \
		FOBModule.h \
		FOBSource.h \
		FastTrakModule.cxx \
		FastTrakModule.h \
		FastTrakSource.h \
		GPSDriver.h \
		GPSDriver.cxx \
		GPS_Handler.h \
		GPS_Handler.cxx \
		GPSModule.h \
		GPSModule.cxx \
		GPSSource.h \
		InterSenseModule.cxx \
		InterSenseModule.h \
		InterSenseSource.h \
		JoystickModule.cxx \
		JoystickModule.h \
		JoystickSource.h \
		ParButtonModule.cxx \
		ParButtonModule.h \
		ParButtonSource.h \
		WacomGraphireModule.cxx \
		WacomGraphireModule.h \
		WacomGraphireSource.h \
		SpaceMouseModule.cxx \
		SpaceMouseModule.h \
		SpaceMouseSource.h \
		SpeechCore.cxx \
		SpeechCore.h \
		SpeechDef.h \
		SpeechInc.h \
		SpeechModule.cxx \
		SpeechModule.h \
		SpeechSet.cxx \
		SpeechSet.h \
		SpeechSource.cxx \
		SpeechSource.h \
		SpeechVoice.cxx \
		SpeechVoice.h \
		SpeechVoiceModule.cxx \
		SpeechVoiceModule.h \
		UltraTrakModule.cxx \
		UltraTrakModule.h \
		UltraTrakSource.h \
		nmea.h \
		nmea.cxx \
		rtcm.h \
		rtcm.cxx
