## Makefile.am -- Process this file with automake to produce Makefile.in

include $(top_srcdir)/src/Makefile.common

otinputincdir = $(otincdir)/input
otinputinc_HEADERS = \
        ARTDataTrackerChomp.h \
        ARTDataTrackerModule.h \
        ARTDataTrackerSource.h \
        ARToolKitModule.h \
        ARToolKitSource.h \
        CyberMouseModule.h \
        CyberMouseSource.h \
        DGPSIP_Handler.h \
        DGPSMirror_Handler.h \
        FOBModule.h \
        FOBSource.h \
        FastTrakModule.h \
        FastTrakSource.h \
        GPSDirectionSource.h \
        GPSDriver.h \
        GPS_Handler.h \
        GPSModule.h \
        GPSParser.h \
        GPSSource.h \
        InterSenseModule.h \
        InterSenseSource.h \
        JoystickModule.h \
        JoystickSource.h \
        ParButtonModule.h \
        ParButtonSource.h \
        WacomGraphireModule.h \
        WacomGraphireSource.h \
        SpaceMouseModule.h \
        SpaceMouseSource.h \
        SpeechCore.h \
        SpeechDef.h \
        SpeechInc.h \
        SpeechModule.h \
        SpeechSet.h \
        SpeechSource.h \
        SpeechVoice.h \
        SpeechVoiceModule.h \
        UltraTrakModule.h \
        UltraTrakSource.h \
        rtcm.h

noinst_LTLIBRARIES = libinput.la
libinput_la_SOURCES = \
        ARTDataTrackerChomp.cxx \
        ARTDataTrackerChomp.h \
        ARTDataTrackerModule.cxx \
        ARTDataTrackerModule.h \
        ARTDataTrackerSource.h \
        ARToolKitModule.cxx \
        ARToolKitModule.h \
        ARToolKitSource.h \
        CyberMouseModule.cxx \
        CyberMouseModule.h \
        CyberMouseSource.h \
        DGPSIP_Handler.h \
        DGPSIP_Handler.cxx \
        DGPSMirror_Handler.cxx \
        DGPSMirror_Handler.h \
        FOBModule.cxx \
        FOBModule.h \
        FOBSource.h \
        FastTrakModule.cxx \
        FastTrakModule.h \
        FastTrakSource.h \
        GPSDirectionSource.h \
        GPSDriver.cxx \
        GPSDriver.h \
        GPS_Handler.cxx \
        GPS_Handler.h \
        GPSModule.cxx \
        GPSModule.h \
        GPSParser.cxx \
        GPSParser.h \
        GPSSource.h \
        InterSenseModule.cxx \
        InterSenseModule.h \
        InterSenseSource.h \
        JoystickModule.cxx \
        JoystickModule.h \
        JoystickSource.h \
        ParButtonModule.cxx \
        ParButtonModule.h \
        ParButtonSource.h \
        WacomGraphireModule.cxx \
        WacomGraphireModule.h \
        WacomGraphireSource.h \
        SpaceMouseModule.cxx \
        SpaceMouseModule.h \
        SpaceMouseSource.h \
        SpeechCore.cxx \
        SpeechCore.h \
        SpeechDef.h \
        SpeechInc.h \
        SpeechModule.cxx \
        SpeechModule.h \
        SpeechSet.cxx \
        SpeechSet.h \
        SpeechSource.cxx \
        SpeechSource.h \
        SpeechVoice.cxx \
        SpeechVoice.h \
        SpeechVoiceModule.cxx \
        SpeechVoiceModule.h \
        UltraTrakModule.cxx \
        UltraTrakModule.h \
        UltraTrakSource.h \
        rtcm.h \
        rtcm.cxx
