##----------------------------------------------------------------------------
##       Makefile.am,v 4.2 2004/01/22 06:07:50 ossama Exp
##
##       Makefile for the client programs that test the ACE network services
##----------------------------------------------------------------------------

##
##  Process this file with automake to create Makefile.in
##

SUBDIRS = \
  Logger \
  Naming \
  Tokens
