## Makefile.am -- Process this file with automake to produce Makefile.in

include $(top_srcdir)/src/Makefile.common

noinst_LTLIBRARIES = libintersense.la
libintersense_la_SOURCES = \
		isdriver.c \
		isdriver.h \
		isense.c \
		isense.h \
		itcom.c \
		itcom.h \
		serial.c \
		serial.h \
		timer.c \
		timer.h
